<resources>
    <string name="app_name">StoqControl</string>
    <string name="cadastro_requisitante">CADASTRO REQUISITANTE</string>
    <string name="cadastro_fornecedor">CADASTRO FORNECEDOR</string>
    <string name="estoque_atual">ESTOQUE ATUAL</string>
    <string name="entradas">ENTRADAS</string>
    <string name="saidas">SAIDAS</string>
    <string name="cadastro_material">CADASTRO MATERIAL</string>
    <string name="descricao">Descrição</string>
    <string name="lote">Lote</string>
    <string name="validade">Validade</string>
    <string name="tipo">Tipo</string>
    <string name="categoria">Categoria</string>
    <string name="codigo">Código</string>
    <string name="fornecedor">Fornecedor</string>
    <string name="title_activity_cadastro_requisitante">Cadastro Requisitante</string>
    <string name="nome_requisitante">Nome Requisitante</string>
    <string name="setor_requisitante">Setor Requisitante</string>
    <string name="nome_fornecedor">Nome Fornecedor</string>
    <string name="contato">Contato</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="selecionar_fornecedor">Selecionar fornecedor</string>
    <string name="insira_descricao">Insira a descrição</string>
    <string name="insira_lote">Insira o lote</string>
    <string name="insira_validade">Insira a validade</string>
    <string name="insira_tipo">Insira o tipo</string>
    <string name="insira_categoria">Insira a categoria</string>
    <string name="insira_codigo">Insira o código</string>
    <string name="insira_atual">Insira a quantidade atual</string>
    <string name="insira_minima">Insira a quantidade mínima</string>
    <string name="erro_cadastrar">Erro ao tentar cadastrar</string>
    <string name="ok">Ok</string>
    <string name="sucesso_cadastrar_material">Material inserido com sucesso!</string>
    <string name="sucesso_cadastrar_fornecedor">Fornecedor inserido com sucesso!</string>
    <string name="sucesso_cadastrar_requisitante">Requisitante inserido com sucesso!</string>
    <string name="avise_adm_msg">Avise o administrador... Mensagem:</string>
    <string name="insira_fornecedor">Insira o fornecedor</string>
    <string name="insira_contato">Insira o contato</string>
    <string name="insira_requisitante">Insira o nome do requisitante</string>
    <string name="insira_setor">Insira o setor do requisitante</string>
    <string name="qtd_atual">Qtd. Atual</string>
    <string name="qtd_minima">Qtd. Mínima</string>
</resources>
