<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cadastra_material"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:background="@drawable/button_circle_background"
                android:foreground="@drawable/ripple_circle"
                android:text="@string/cadastro_material" />

            <Button
                android:id="@+id/btn_cadastra_requisitante"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:background="@drawable/button_circle_background"
                android:foreground="@drawable/ripple_circle"
                android:text="@string/cadastro_requisitante" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cadastra_fornecedor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:background="@drawable/button_circle_background"
                android:foreground="@drawable/ripple_circle"
                android:text="@string/cadastro_fornecedor" />

            <Button
                android:id="@+id/btn_estoque"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:background="@drawable/button_circle_background"
                android:foreground="@drawable/ripple_circle"
                android:text="@string/estoque_atual" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_entradas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:background="@drawable/button_circle_background"
                android:foreground="@drawable/ripple_circle"
                android:text="@string/entradas" />

            <Button
                android:id="@+id/btn_saidas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:background="@drawable/button_circle_background"
                android:foreground="@drawable/ripple_circle"
                android:text="@string/saidas" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>